--- a/react-care-team/src/index.css
+++ b/react-care-team/src/index.css
@@ -25,8 +25,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  display: block
   min-width: 320px;
   min-height: 100vh;
 }
@@ -66,4 +65,27 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.profile-doctor {
+  background-color: #213547;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 0px 15px;
+  display: grid;
+}
+
+.profile-doctor h3 {
+  padding: 0;
+  margin: 0;
+}
+
+.profile-content {
+  background-color: #535bf2;
+  margin: 20px;
+  text-align: start;
+}
+
+.relevant-info-doctor {
+  background-color: #213547;
 }
