--- a/react-care-team/src/index.css
+++ b/react-care-team/src/index.css
@@ -25,7 +25,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: block
+  display: block;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -83,4 +83,12 @@ button:focus-visible {
 
 .relevant-info-doctor {
   background-color: #213547;
+}
+
+form {
+  display: block;
+  margin: 0 auto;
+  max-width: 500px;
+  padding: 0 1em;
+  align-items: start;
 }
