--- a/react-care-team/src/index.css
+++ b/react-care-team/src/index.css
@@ -5,7 +5,11 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: red;
+  background-image: linear-gradient(
+    109.6deg,
+    rgba(61, 245, 167, 1) 11.2%,
+    rgba(9, 111, 224, 1) 91.1%
+  );
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -91,4 +95,17 @@ form {
   max-width: 500px;
   padding: 0 1em;
   align-items: start;
+}
+
+/* Header  */
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin-inline: 20px;
+}
+
+.container-header-right {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
