--- a/react-care-team/src/index.css
+++ b/react-care-team/src/index.css
@@ -1,149 +1,4 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-image: linear-gradient(
-    109.6deg,
-    rgba(61, 245, 167, 1) 11.2%,
-    rgba(9, 111, 224, 1) 91.1%
-  );
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: block;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
-.profile-doctor {
-  background-color: #213547;
-  border: 1px solid white;
-  border-radius: 10px;
-  padding: 0px 15px;
-  display: grid;
-}
-
-.profile-content {
-  background-color: #535bf2;
-  margin: 20px;
-  text-align: start;
-}
-
-.relevant-info-doctor {
-  background-color: #213547;
-  border-radius: 4px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 10px 15px;
-}
-
-/* form {
-  display: block;
-  margin: 0 auto;
-  max-width: 500px;
-  padding: 0 1em;
-  align-items: start;
-} */
-
-.form-appointment-container {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-
-.appointment-form-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  width: 100%;
-  gap: 20px;
-}
-
-/* Header  */
-.header {
-  display: flex;
-  justify-content: space-between;
-  margin-inline: 20px;
-}
-
-.container-header-right {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-#dash-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.doctor-page-container {
-  display: grid;
-  grid-template-columns: minmax(auto, 400px) 1fr;
-  grid-template-areas:
-    "image info"
-    "profile appts";
-  gap: 20px;
-}
-
-.profile-doctor {
-  grid-area: profile;
-}
+@import url("css/_base.css");
+@import url("css/header.css");
+@import url("css/dash.css");
+@import url("css/button.css");
