added a bunch of tailwind styling to the components but still a lot more to do

--- a/react-care-team/src/index.css
+++ b/react-care-team/src/index.css
@@ -2,3 +2,7 @@
 @import url("css/header.css");
 @import url("css/dash.css");
 @import url("css/button.css");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
